# itmo-labs

./: .gitignore  CMakeLists.txt  README.md
l1-sort/: sort.h  sort_test.cpp
l2-containers/: array.h  array_test.cpp  list.h  list_test.cpp
l3-search/: tree.h  tree_test.cpp
l4-allocation/: abstract.h  allocators_test.cpp  ca.h  fsa.h  memory.h  myfsa.h  page.h
